--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
+  /* background-color: lightgrey; */
+  /* background-color: rgb(234, 232, 232); */
+  background-color: #EAEDED !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
